fix: icon not centered

--- a/packages/frontend/src/app/globals.css
+++ b/packages/frontend/src/app/globals.css
@@ -116,7 +116,7 @@ a {
   grid-template-columns: max-content max-content;
   align-items: center;
   column-gap: 1rem;
-  padding: 0.5rem 0 0.5rem 1.5rem;
+  padding: 0.5rem 0 0.5rem calc(var(--nav-width) / 2 - 13px);
 }
 
 .nav__logo {
